        - the '--reconstruct-symmetry' and '--uniquify-atoms' options as well
          as their negations. These options allow to optionally restore the
          full unit cell before carrying out the disorder site detection.
        - the '--die-on-errors', '--die-on-warnings', '--die-on-notes' options
          and their negations.
    - the COD::CIF::Data::MarkDisorder module.
  * Changed:
    - COD::CIF::DDL:
        - started setting data item '_units.code' value 'none' for data items
          without explicit units.
        - implemented partial handling of the '_list_reference' data item in
          the ddl1_to_ddlm() subroutine.
        - implemented handling of the '_list_link_parent', '_list_link_child',
          '_list_mandatory', '_related_item' and '_related_function' data items.
        - updated the ddl1_to_ddlm() subroutine to output DDLm dictionaries
          that conform to DDLm reference dictionary version 4.1.0.
    - COD::CIF::DDL::DDLm::Validate:
        - updated the 'Symop' content type validation logic in accordance to
          the changes in the DDLm reference dictionary version 4.2.0.
    - data/replacement-values/replacement_tags.lst:
        - added several data name replacement rules.
  * Fixed:
    - COD::CIF::DDL:
        - ensured that the same date is set to both the '_dictionary.date' data
          item and the most recent entry in the DICTIONARY_AUDIT loop.
        - ensured that the automatically generated dictionary version adheres
          to the requirements of the DDLm 'Version' data type.
        - the description of the '--imports' option in the help message.
    - data/replacement-values/replacement_tags.lst:
        - corrected a rule that incorrectly converted data name
          '_atom_site_refinement_flags' to '_atom_site_refinement_flag'.
  * Removed:
    - dependency installer for Fedora 37.

cod-tools (3.8.1)

  * Fixed:
    - spglib now builds with CMake v3.13 or newer.

cod-tools (3.8.0)

  * Added: