@@ -12,6 +12,9 @@ cod-tools (unreleased)
         - the '--die-on-errors', '--die-on-warnings', '--die-on-notes' options
           and their negations.
     - the COD::CIF::Data::MarkDisorder module.
+    - COD::CIF::Tags::DictTags:
+        - added data names from the 'cif_iucr.dic' dictionary version 1.2 to
+          the global '@tag_list' variable.
   * Changed:
     - COD::CIF::DDL:
         - started setting data item '_units.code' value 'none' for data items
